# celleste

./: .gitignore  Cargo.toml  README.md  pixi.toml
automata/: Cargo.toml  README.md
automata/src/: main.rs
bzr/: Cargo.toml
bzr/src/: main.rs
gol/: Cargo.toml
gol/src/: main.rs
src/: main.rs
