[package]
name = "celleste"
version = "0.1.2"
description = "A flexible 2D cellular automaton"
license = "GPL-3.0"
repository = "https://github.com/mcgilmore/automata/automata"
readme = "README.md"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
ggez = "0.9.3"
serde = "1.0.216"
serde_json = "1.0.133"
