[package]
name = "celleste"
version = "0.1.6"
description = "A flexible 2D cellular automaton"
license = "GPL-3.0"
repository = "https://github.com/mcgilmore/celleste"
readme = "README.md"
edition = "2021"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
ggez = "0.9.3"
serde = "1.0.219"
serde_json = "1.0.140"
